namespace SFunctionContinuous.Model.Declarations
{
    public class OutputDeclaration : Declaration
    {
        public OutputDeclaration(string name) : base(name)
        {

        }
    }
}
